implement "backspace" button with its function useres will be able to delete if they type a wrong number or an operator

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         <button class="multiplication">x</button>
         <button class="subtraction">-</button>
         <button class="divison">/</button>
+        <button class="backspace">Back</button>
     </div>
 
     <script src="calculator.js"></script>
