--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <button class="subtraction">-</button>
         <button class="divison">/</button>
         <button class="backspace">Back</button>
+        <button class="dot">.</button>
     </div>
 
     <script src="calculator.js"></script>
